# v4uav

./: .gitignore  CMakeLists.txt  README.md  package.xml
assets/gazebo/models/v4uav_simple_circuit_line/: model.config  model.sdf
assets/gazebo/models/v4uav_simple_circuit_tower/: model.config  model.sdf
assets/gazebo/worlds/: v4uav.world
assets/model/: v4uav.cfg  v4uav.names
config/: params.yaml
launch/: gazebo_ros.launch  v4uav.launch
msg/: v4uav_command.msg  v4uav_setpoint.msg
scripts/: detection_client.py  detection_server.py  v4uav_controller.py  v4uav_detector.py  v4uav_interface.py  v4uav_position.py  v4uav_publisher.py  v4uav_state.py
srv/: Detection.srv  GetDetection.srv  GetPosition.srv  GetState.srv
