<?xml version="1.0"?>
<package format="2">
  <name>v4uav</name>
  <version>0.0.1</version>
  <description>
    V4UAV -- ROS package to control UAVs in power transmission line
    inspection task using computer vision techniques
  </description>
  
  <maintainer email="lcfdiniz@outlook.com">Lucas F. Diniz</maintainer>
  <license>BSD</license>
  
  <url type="repository">https://github.com/lcfdiniz/V4UAV.git</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- packages -->
  <depend>cv_bridge</depend>
  <depend>opencv2</depend>
  <depend>rospy</depend>

  <!-- message packages -->
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
